# ChatFastApiDDD

./: .gitignore  Dockerfile  Makefile  pyproject.toml
app/: t1.ipynb
app/application/api/: main.py
app/domain/entities/: base.py  messages.py
app/domain/events/: base.py
app/domain/exeptions/: messages.py
app/domain/values/: base.py  messages.py
app/tests/domain/values/: test_messages.py
